--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Ecom-Ecommerce App</title>
+    <title>Stepup Shoes-Your footmate</title>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </head>
   <body>
